<resources>
    <string name="app_name">Mutho Browser</string>
    <string name="app_version_name">Alpha</string>
    <string name="accent_amber">Amber</string>
    <string name="accent_blue">Blue</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_cyan">Cyan</string>
    <string name="accent_deep_orange">Deep Orange</string>
    <string name="accent_deep_purple">Deep Purple</string>
    <string name="accent_default">Default (Red)</string>
    <string name="accent_green">Green</string>
    <string name="accent_indigo">Indigo</string>
    <string name="accent_light_blue">Light Blue</string>
    <string name="accent_light_green">Light Green</string>
    <string name="accent_lime">Lime</string>
    <string name="accent_orange">Orange</string>
    <string name="accent_pink">Pink</string>
    <string name="accent_purple">Purple</string>
    <string name="accent_teal">Teal</string>
    <string name="accent_yellow">Yellow</string>
    <string name="accent_brown">Brown</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_add_to_homescreen">Add to home screen</string>
    <string name="action_allow">Allow</string>
    <string name="action_back">Back</string>
    <string name="action_blank">Blank page</string>
    <string name="action_bookmark_edited">Bookmark edited</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close_all_other_tabs">Close all other tabs</string>
    <string name="action_close_incognito">Close incognito mode</string>
    <string name="action_delete_all_bookmarks">Delete all bookmarks</string>
    <string name="action_delete">Delete</string>
    <string name="action_dont_allow">Don\'t allow</string>
    <string name="action_download">Download</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_edit_sessions">Edit sessions</string>
    <string name="action_find">Find in page</string>
    <string name="action_folder">Folder</string>
    <string name="action_forward">Forward</string>
    <string name="action_history">History</string>
    <string name="action_homepage">Default</string>
    <string name="action_incognito">Go incognito</string>
    <string name="action_message_canceled">Action canceled.</string>
    <string name="action_more">More</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_open">Open</string>
    <string name="action_print">Print</string>
    <string name="action_reload">Reload</string>
    <string name="action_remove_bookmark">Bookmark removed</string>
    <string name="action_remove">Remove</string>
    <string name="action_restore_all_tabs">Restore all tabs</string>
    <string name="action_restore_tab">Restore tab</string>
    <string name="action_save_session">Save session as</string>
    <string name="action_sessions">Sessions</string>
    <string name="action_share">Share</string>
    <string name="action_show_homepage">Homepage</string>
    <string name="action_webpage">Website</string>
    <string name="action_yes">Yes</string>
    <string name="ad_block_load_failure">Failed to load hosts from ad blocking source.</string>
    <string name="ad_server_list">AdGuard Ad-Server List</string>
    <string name="agent_android_mobile">Android (Mobile)</string>
    <string name="agent_custom">Custom</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_ios_mobile">iOS (Mobile)</string>
    <string name="agent_linux_desktop">Linux (Desktop)</string>
    <string name="agent_macos_desktop">macOS (Desktop)</string>
    <string name="agent_system">System</string>
    <string name="agent_web_view">WebView</string>
    <string name="agent_windows_desktop">Windows (Desktop)</string>
    <string name="agent">User agent</string>
    <string name="algorithm">Algorithm</string>
    <string name="allow_javascript">Allow JavaScript for this site</string>
    <string name="android_open_source_project">Android Open Source Project</string>
    <string name="apache">Apache License 2.0</string>
    <string name="black_theme">Black (AMOLED)</string>
    <string name="block_ad_refresh_hosts">Refresh hosts file…</string>
    <string name="block_ad_refresh_now">Refresh hosts now</string>
    <string name="block_ad_remote_refresh_frequency_description">For remote hosts file</string>
    <string name="block_ad_source">Hosts file source</string>
    <string name="block_ads">Block ads</string>
    <string-array name="block_javascript">
        <item>@string/no</item>
        <item>@string/unlisted_javascript</item>
        <item>@string/listed_javascript</item>
    </string-array>
    <string name="block_malware">Block malicious sites</string>
    <string name="block_sites_title">Separate sites with a comma</string>
    <string name="block_source_default">Default hosts</string>
    <string name="block_source_local_description">File: %1$s</string>
    <string name="block_source_local">Local hosts file</string>
    <string name="block_source_remote_description">URL: %1$s</string>
    <string name="block_source_remote">Remote hosts file</string>
    <string name="blocked_javascript">Block JavaScript for this site</string>
    <string name="bookmark_export_failure">Sorry, bookmarks could not be exported!</string>
    <string name="bookmark_export_path">Bookmarks exported to</string>
    <string name="bookmark_in_new_tab">Bookmark in new tab</string>
    <string name="bookmark_restore">Bookmarks restored</string>
    <string name="bookmark_settings">Bookmarks</string>
    <string name="busy">Busy, try again shortly."</string>
    <string name="cache">Clear cache on exit</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="clean_settings">This will delete all data that Mutho Browser has stored on your device! The app will exit when you confirm it.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cookies_exit">Clear cookies on exit</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="clear_history_exit">Clear history on exit</string>
    <string name="clear_history">Clear browser history</string>
    <string name="clear_web_storage_exit">Clear web storage on exit</string>
    <string name="clear_web_storage">Clear web storage</string>
    <string name="close_all_tabs">Close all tabs</string>
    <string name="close_on_last_tab">Close browser with last tab</string>
    <string name="close_other_tabs">Close other tabs</string>
    <string name="close_tab">Close current tab</string>
    <string name="color_mode">Color mode</string>
    <string name="cookies">Enable cookies</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_theme">Dark</string>
    <string name="default_theme">Follow System</string>
    <string name="delete_all_bookmarks">Delete all bookmarks?</string>
    <string name="dialog_tools_title">Page tools</string>
    <string name="download">Download location</string>
    <string name="force_zoom_summary">Does not work if JavaScript is not enabled</string>
    <string name="force_zoom">Force zoom for websites</string>
    <string name="home">Homepage</string>
    <string name="homepage_in_new_tab">Homepage in new tab</string>
    <string name="http_proxy">HTTP proxy</string>
    <string name="import_export_settings">Import &amp; Export</string>
    <string name="incognito_cookies">Enable cookies in incognito mode</string>
    <string name="java">Enable JavaScript</string>
    <string name="load_images">Load images</string>
    <string name="new_tab_position">New tab position</string>
    <string name="reading_mode">Reader mode</string>
    <string name="recommended">Recommended</string>
    <string name="restore_tabs_on_startup">Restore tabs on startup</string>
    <string name="save_data">Request \'Save-Data\'</string>
    <string name="search_in_new_tab">Search in new tab</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="search">Search engine</string>
    <string name="settings_about_explain">Details about version, author and license.</string>
    <string name="settings_about">About</string>
    <string name="settings_admalwareblocker">Ad &amp; Malware Blocker</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_display">Look &amp; feel</string>
    <string name="settings_extensions">Extensions</string>
    <string name="settings_general">General</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_summary_apps">Enable third-party apps</string>
    <string name="settings_summary_adblock">Block advertising, tracking, malware…</string>
    <string name="settings_summary_dark_mode_default">Define if new tabs use force dark mode by default</string>
    <string name="settings_summary_desktop_mode_default">Define if new tabs use desktop mode by default</string>
    <string name="settings_summary_display">App design, color mode, pull-to-refresh…</string>
    <string name="settings_summary_extensions">Install extensions</string>
    <string name="settings_summary_general">Home page, search services, tabs…</string>
    <string name="settings_summary_import_export">Backup and restore settings and bookmarks</string>
    <string name="settings_summary_privacy">Cache, history, cookies…</string>
    <string name="settings_title_apps">Apps</string>
    <string name="settings_title_dark_mode_default">Force dark mode</string>
    <string name="settings_title_desktop_mode_default">Desktop mode</string>
    <string name="settings">Settings</string>
    <string name="show_ssl">Show SSL warning dialogs</string>
    <string name="suggest">Search suggestions (number)</string>
    <string name="tabs">Tabs</string>
    <string name="text_encoding">Text encoding</string>
    <string name="translator">Translate</string>
    <string name="url_in_new_tab">URL in new tab</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="new_tab_position_after_value" translatable="false">AFTER_CURRENT_TAB</string>
    <string name="pref_key_bookmark_in_new_tab" translatable="false">pref_key_bookmark_in_new_tab</string>
    <string name="pref_key_cookies_incognito" translatable="false">pref_key_cookies_incognito</string>
    <string name="pref_key_cookies" translatable="false">pref_key_cookies</string>
    <string name="pref_key_dark_mode_default" translatable="false">pref_key_dark_mode_default</string>
    <string name="pref_key_default_text_encoding" translatable="false">pref_key_default_text_encoding</string>
    <string name="pref_key_desktop_mode_default" translatable="false">pref_key_desktop_mode_default</string>
    <string name="pref_key_homepage_in_new_tab" translatable="false">pref_key_homepage_in_new_tab</string>
    <string name="pref_key_javascript" translatable="false">pref_key_javascript</string>
    <string name="pref_key_load_images" translatable="false">pref_key_load_images</string>
    <string name="pref_key_new_tab_position" translatable="false">pref_key_new_tab_position</string>
    <string name="pref_key_request_save_data" translatable="false">pref_key_request_save_data</string>
    <string name="pref_key_restore_tabs_on_startup" translatable="false">pref_key_restore_tabs_on_startup</string>
    <string name="pref_key_search_in_new_tab" translatable="false">pref_key_search_in_new_tab</string>
    <string name="pref_key_support_multiple_window" translatable="false">pref_key_support_multiple_window</string>
    <string name="pref_key_url_in_new_tab" translatable="false">pref_key_url_in_new_tab</string>
</resources>