<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_general">

    <Preference
        android:key="home"
        android:title="@string/home"
        app:icon="@drawable/ic_action_home_oval" />

    <Preference
        android:key="search"
        android:title="@string/search"
        app:icon="@drawable/ic_search_oval" />

    <Preference
        android:key="suggestions_choice"
        android:title="@string/search_suggestions"
        app:icon="@drawable/ic_list_oval" />

    <Preference
        android:key="suggestions_number"
        android:title="@string/suggest"
        app:icon="@drawable/ic_list_number_oval" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/tabs">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_restore_tabs_on_startup"
            android:summary="@string/recommended"
            android:title="@string/restore_tabs_on_startup"
            app:icon="@drawable/ic_save_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="last_tab"
            android:summary="@string/recommended"
            android:title="@string/close_on_last_tab"
            app:icon="@drawable/ic_apps_oval" />

        <SwitchPreferenceCompat
            app:key="@string/pref_key_search_in_new_tab"
            app:title="@string/search_in_new_tab"
            app:defaultValue="@bool/pref_default_search_in_new_tab"
            app:icon="@drawable/ic_search_oval" />

        <SwitchPreferenceCompat
            app:key="@string/pref_key_url_in_new_tab"
            app:title="@string/url_in_new_tab"
            app:defaultValue="@bool/pref_default_url_in_new_tab"
            app:icon="@drawable/ic_web_oval" />

        <SwitchPreferenceCompat
            app:key="@string/pref_key_homepage_in_new_tab"
            app:title="@string/homepage_in_new_tab"
            app:defaultValue="@bool/pref_default_homepage_in_new_tab"
            app:iconSpaceReserved="false"
            app:icon="@drawable/ic_action_home_oval" />

        <SwitchPreferenceCompat
            app:key="@string/pref_key_bookmark_in_new_tab"
            android:summary="@string/recommended"
            app:title="@string/bookmark_in_new_tab"
            app:defaultValue="@bool/pref_default_bookmark_in_new_tab"
            app:iconSpaceReserved="false"
            app:icon="@drawable/ic_bookmark_border_oval" />

        <ListPreference
            app:key="@string/pref_key_new_tab_position"
            app:title="@string/new_tab_position"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/new_tab_position_after_value"
            app:entries="@array/new_tab_positions"
            app:entryValues="@array/new_tab_position_values"
            app:icon="@drawable/ic_library_add_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_desktop_mode_default"
            android:title="@string/settings_title_desktop_mode_default"
            android:summary="@string/settings_summary_desktop_mode_default"
            app:icon="@drawable/ic_desktop_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_dark_mode_default"
            android:title="@string/settings_title_dark_mode_default"
            android:summary="@string/settings_summary_dark_mode_default"
            app:iconSpaceReserved="false"
            app:icon="@drawable/ic_dark_mode_oval" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_advanced">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_load_images"
            android:summary="@string/recommended"
            android:title="@string/load_images"
            app:icon="@drawable/ic_image_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_support_multiple_window"
            android:summary="@string/recommended"
            android:title="@string/window"
            app:icon="@drawable/ic_baseline_open_in_new_24_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_request_save_data"
            android:title="@string/save_data"
            app:icon="@drawable/ic_data_save_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show_ssl"
            android:summary="@string/recommended"
            android:title="@string/show_ssl"
            app:icon="@drawable/ic_warn_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_cookies"
            android:summary="@string/recommended"
            android:title="@string/cookies"
            app:icon="@drawable/ic_cookie_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_cookies_incognito"
            android:title="@string/incognito_cookies"
            app:icon="@drawable/ic_cookie_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_zoom"
            android:summary="@string/force_zoom_summary"
            android:title="@string/force_zoom"
            app:icon="@drawable/ic_force_zoom_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_javascript"
            android:summary="@string/recommended"
            android:title="@string/java"
            app:icon="@drawable/ic_script_oval" />

        <Preference
            android:key="block_javascript"
            android:title="@string/block_javascript"
            app:icon="@drawable/ic_script_key_oval"/>

        <Preference
            android:key="download"
            android:title="@string/download"
            app:icon="@drawable/ic_cloud_download_oval" />

        <Preference
            android:key="proxy"
            android:title="@string/http_proxy"
            app:icon="@drawable/ic_http_oval" />

        <Preference
            android:key="agent"
            android:title="@string/agent"
            app:icon="@drawable/ic_about_oval" />

        <Preference
            android:key="@string/pref_key_default_text_encoding"
            android:title="@string/text_encoding"
            app:icon="@drawable/ic_text_variant_oval" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
