<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.Preference
        app:fragment="com.muthopay.muthobrowser.settings.fragment.GeneralSettingsFragment"
        app:summary="@string/settings_summary_general"
        app:title="@string/settings_general"
        app:icon="@drawable/ic_settings_oval" />

    <androidx.preference.Preference
        app:fragment="com.muthopay.muthobrowser.settings.fragment.DisplaySettingsFragment"
        app:summary="@string/settings_summary_display"
        app:title="@string/settings_display"
        app:icon="@drawable/ic_palette_oval" />

    <androidx.preference.Preference
        app:fragment="com.muthopay.muthobrowser.settings.fragment.PrivacySettingsFragment"
        app:summary="@string/settings_summary_privacy"
        app:title="@string/settings_privacy"
        app:icon="@drawable/ic_security_oval" />

    <androidx.preference.Preference
        app:fragment="com.muthopay.muthobrowser.settings.fragment.AdBlockSettingsFragment"
        app:summary="@string/settings_summary_adblock"
        app:title="@string/settings_admalwareblocker"
        app:icon="@drawable/ic_block_oval" />

    <androidx.preference.Preference
        app:fragment="com.muthopay.muthobrowser.settings.fragment.ExtensionsSettingsFragment"
        app:summary="@string/settings_summary_extensions"
        app:title="@string/settings_extensions"
        app:icon="@drawable/ic_extension_oval" />

    <androidx.preference.Preference
        app:fragment="com.muthopay.muthobrowser.settings.fragment.ImportExportSettingsFragment"
        app:summary="@string/settings_summary_import_export"
        app:title="@string/import_export_settings"
        app:icon="@drawable/ic_import_export_oval"  />

    <androidx.preference.Preference
        app:fragment="com.muthopay.muthobrowser.settings.fragment.AppsSettingsFragment"
        app:summary="@string/settings_summary_apps"
        app:title="@string/settings_title_apps"
        app:icon="@drawable/ic_apps_oval" />

    <androidx.preference.Preference
        app:fragment="com.muthopay.muthobrowser.settings.fragment.AboutSettingsFragment"
        app:summary="@string/settings_about_explain"
        app:title="@string/settings_about"
        app:icon="@drawable/ic_about_oval" />

</androidx.preference.PreferenceScreen>
