<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="?attr/popupMenuStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/popupMenuBackground"
        android:elevation="4dp">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/menuShortcutBack"
                style="?android:attr/actionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/action_back"
                app:tooltipText="@{@string/action_back}"
                app:srcCompat="@drawable/ic_action_back" />

            <ImageButton
                android:id="@+id/menuShortcutForward"
                style="?android:attr/actionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/action_forward"
                app:tooltipText="@{@string/action_forward}"
                app:srcCompat="@drawable/ic_action_forward" />

            <ImageButton
                android:id="@+id/menuShortcutRefresh"
                style="?android:attr/actionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/action_reload"
                app:tooltipText="@{@string/action_reload}"
                app:srcCompat="@drawable/round_refresh_24" />

            <ImageButton
                android:id="@+id/menuShortcutBookmarks"
                style="?android:attr/actionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/action_bookmarks"
                app:tooltipText="@{@string/action_bookmarks}"
                app:srcCompat="@drawable/round_star_border_24" />

            <ImageButton
                android:id="@+id/menuShortcutHome"
                style="?android:attr/actionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/action_show_homepage"
                app:tooltipText="@{@string/action_show_homepage}"
                app:srcCompat="@drawable/outline_home_24" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:paddingBottom="10dp"
            android:requiresFadingEdge="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/menuItemNewTab"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_action_plus"
                    android:text="@string/action_new_tab" />

                <TextView
                    android:id="@+id/menuItemCloseIncognito"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/round_clear_24"
                    android:text="@string/action_close_incognito"
                    android:enabled="true" />

                <TextView
                    android:id="@+id/menuItemIncognito"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_incognito_24"
                    android:text="@string/action_incognito"
                    android:enabled="true" />

                <TextView
                    android:id="@+id/menuItemSessions"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_sessions"
                    android:text="@string/action_sessions" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/menuItemHistory"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/round_history_24"
                    android:text="@string/action_history" />

                <TextView
                    android:id="@+id/menuItemDownloads"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_file_download"
                    android:text="@string/action_downloads" />

                <TextView
                    android:id="@+id/menuItemPrint"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_action_print"
                    android:text="@string/action_print" />

                <TextView
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/menuItemShare"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_share"
                    android:text="@string/action_share" />

                <TextView
                    android:id="@+id/menuItemFind"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_find"
                    android:text="@string/action_find" />

                <TextView
                    android:id="@+id/menuItemAddToHome"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_add_to_home_screen"
                    android:text="@string/action_add_to_homescreen" />

                <TextView
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/menuItemDesktopMode"
                    style="@style/BrowserTextMenuItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/agent_desktop"
                    android:gravity="center_vertical"
                    android:enabled="true"
                    android:background="?attr/selectableItemBackground"
                    app:drawableEndCompat="?android:attr/listChoiceIndicatorMultiple"
                    app:drawableStartCompat="@drawable/round_desktop_windows_24" />

                <CheckBox
                    android:id="@+id/menuItemDarkMode"
                    style="@style/BrowserTextMenuItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/dark_mode"
                    android:gravity="center_vertical"
                    android:enabled="true"
                    android:background="?attr/selectableItemBackground"
                    app:drawableEndCompat="?android:attr/listChoiceIndicatorMultiple"
                    app:drawableStartCompat="@drawable/round_dark_mode_24" />

                <TextView
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/menuItemTranslate"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/round_translate_24"
                    android:text="@string/translator" />

                <TextView
                    android:id="@+id/menuItemReaderMode"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_action_reading"
                    android:text="@string/reading_mode" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/menuItemPageTools"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/ic_page_tools"
                    android:text="@string/dialog_tools_title" />

                <TextView
                    android:id="@+id/menuItemSettings"
                    style="@style/BrowserTextMenuItem"
                    android:background="?attr/selectableItemBackground"
                    app:drawableStartCompat="@drawable/outline_settings_24"
                    android:text="@string/settings" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
